Introduce engine SPI
Signed-off-by: Andriy Redko <drreta@gmail.com>