@@ -26,6 +26,7 @@ import org.opensearch.knn.KNNTestCase;
 import org.opensearch.knn.common.KNNConstants;
 import org.opensearch.knn.index.codec.KNNCodecTestUtil;
 import org.opensearch.knn.index.codec.nativeindex.AbstractNativeEnginesKnnVectorsReader;
+import org.opensearch.knn.index.engine.BuiltinKNNEngine;
 import org.opensearch.knn.index.engine.KNNEngine;
 import org.opensearch.knn.index.mapper.KNNVectorFieldMapper;
 import org.opensearch.knn.memoryoptsearch.VectorSearcher;
@@ -74,8 +75,8 @@ public class Faiss1040ScalarQuantizedKnnVectorsReaderTests extends KNNTestCase {
 
     @SneakyThrows
     public void testSearchFloat_whenSearcherAvailable_thenDelegates() {
-        final FieldInfo fi = createFieldInfo("field1", KNNEngine.FAISS, 0);
-        KNNEngine mockFaiss = spy(KNNEngine.FAISS);
+        final FieldInfo fi = createFieldInfo("field1", BuiltinKNNEngine.FAISS, 0);
+        KNNEngine mockFaiss = spy(BuiltinKNNEngine.FAISS);
         VectorSearcherFactory mockFactory = mock(VectorSearcherFactory.class);
         VectorSearcher mockSearcher = mock(VectorSearcher.class);
         when(mockFaiss.getVectorSearcherFactory()).thenReturn(mockFactory);
@@ -90,33 +91,37 @@ public class Faiss1040ScalarQuantizedKnnVectorsReaderTests extends KNNTestCase {
         ).thenReturn(mockSearcher);
         try (MockedStatic<KNNEngine> ms = mockStatic(KNNEngine.class)) {
             ms.when(() -> KNNEngine.getEngine(any())).thenReturn(mockFaiss);
-            ms.when(KNNEngine::getEnginesThatCreateCustomSegmentFiles).thenReturn(ImmutableSet.of(mockFaiss));
-            final Faiss1040ScalarQuantizedKnnVectorsReader reader = createReader(
-                new FieldInfos(new FieldInfo[] { fi }),
-                Set.of("_0_165_field1.faiss"),
-                mock(FlatVectorsReader.class)
-            );
-            float[] target = { 1, 2, 3 };
-            reader.search("field1", target, null, null);
-            verify(mockSearcher).search(target, null, null);
+            try (MockedStatic<BuiltinKNNEngine> ms2 = mockStatic(BuiltinKNNEngine.class)) {
+                ms2.when(BuiltinKNNEngine::getEnginesThatCreateCustomSegmentFiles).thenReturn(ImmutableSet.of(mockFaiss));
+                final Faiss1040ScalarQuantizedKnnVectorsReader reader = createReader(
+                    new FieldInfos(new FieldInfo[] { fi }),
+                    Set.of("_0_165_field1.faiss"),
+                    mock(FlatVectorsReader.class)
+                );
+                float[] target = { 1, 2, 3 };
+                reader.search("field1", target, null, null);
+                verify(mockSearcher).search(target, null, null);
+            }
         }
     }
 
     @SneakyThrows
     public void testSearchFloat_whenNoSearcher_thenThrowsIllegalState() {
-        final FieldInfo fi = createFieldInfo("field1", KNNEngine.FAISS, 0);
-        KNNEngine mockFaiss = spy(KNNEngine.FAISS);
+        final FieldInfo fi = createFieldInfo("field1", BuiltinKNNEngine.FAISS, 0);
+        KNNEngine mockFaiss = spy(BuiltinKNNEngine.FAISS);
         when(mockFaiss.getVectorSearcherFactory()).thenReturn(null);
 
         try (MockedStatic<KNNEngine> ms = mockStatic(KNNEngine.class)) {
             ms.when(() -> KNNEngine.getEngine(any())).thenReturn(mockFaiss);
-            ms.when(KNNEngine::getEnginesThatCreateCustomSegmentFiles).thenReturn(ImmutableSet.of(mockFaiss));
-            final Faiss1040ScalarQuantizedKnnVectorsReader reader = createReader(
-                new FieldInfos(new FieldInfo[] { fi }),
-                Collections.emptySet(),
-                mock(FlatVectorsReader.class)
-            );
-            expectThrows(IllegalStateException.class, () -> reader.search("field1", new float[] { 1, 2, 3 }, null, null));
+            try (MockedStatic<BuiltinKNNEngine> ms2 = mockStatic(BuiltinKNNEngine.class)) {
+                ms2.when(BuiltinKNNEngine::getEnginesThatCreateCustomSegmentFiles).thenReturn(ImmutableSet.of(mockFaiss));
+                final Faiss1040ScalarQuantizedKnnVectorsReader reader = createReader(
+                    new FieldInfos(new FieldInfo[] { fi }),
+                    Collections.emptySet(),
+                    mock(FlatVectorsReader.class)
+                );
+                expectThrows(IllegalStateException.class, () -> reader.search("field1", new float[] { 1, 2, 3 }, null, null));
+            }
         }
     }
 
@@ -135,8 +140,8 @@ public class Faiss1040ScalarQuantizedKnnVectorsReaderTests extends KNNTestCase {
 
     @SneakyThrows
     public void testClose_thenClosesFlatReaderAndSearcher() {
-        final FieldInfo fi = createFieldInfo("field1", KNNEngine.FAISS, 0);
-        KNNEngine mockFaiss = spy(KNNEngine.FAISS);
+        final FieldInfo fi = createFieldInfo("field1", BuiltinKNNEngine.FAISS, 0);
+        KNNEngine mockFaiss = spy(BuiltinKNNEngine.FAISS);
         VectorSearcherFactory mockFactory = mock(VectorSearcherFactory.class);
         VectorSearcher mockSearcher = mock(VectorSearcher.class);
         when(mockFaiss.getVectorSearcherFactory()).thenReturn(mockFactory);
@@ -153,16 +158,18 @@ public class Faiss1040ScalarQuantizedKnnVectorsReaderTests extends KNNTestCase {
 
         try (MockedStatic<KNNEngine> ms = mockStatic(KNNEngine.class)) {
             ms.when(() -> KNNEngine.getEngine(any())).thenReturn(mockFaiss);
-            ms.when(KNNEngine::getEnginesThatCreateCustomSegmentFiles).thenReturn(ImmutableSet.of(mockFaiss));
-            final Faiss1040ScalarQuantizedKnnVectorsReader reader = createReader(
-                new FieldInfos(new FieldInfo[] { fi }),
-                Set.of("_0_165_field1.faiss"),
-                fvr
-            );
-            reader.search("field1", new float[] { 1, 2, 3 }, null, null);
-            reader.close();
-            verify(fvr).close();
-            verify(mockSearcher).close();
+            try (MockedStatic<BuiltinKNNEngine> ms2 = mockStatic(BuiltinKNNEngine.class)) {
+                ms2.when(BuiltinKNNEngine::getEnginesThatCreateCustomSegmentFiles).thenReturn(ImmutableSet.of(mockFaiss));
+                final Faiss1040ScalarQuantizedKnnVectorsReader reader = createReader(
+                    new FieldInfos(new FieldInfo[] { fi }),
+                    Set.of("_0_165_field1.faiss"),
+                    fvr
+                );
+                reader.search("field1", new float[] { 1, 2, 3 }, null, null);
+                reader.close();
+                verify(fvr).close();
+                verify(mockSearcher).close();
+            }
         }
     }
 
@@ -187,7 +194,7 @@ public class Faiss1040ScalarQuantizedKnnVectorsReaderTests extends KNNTestCase {
 
     @SneakyThrows
     public void testWarmUp_whenMOSNotSupported_thenLogsWarning() {
-        final FieldInfo fi = createFieldInfo("field1", KNNEngine.FAISS, 0);
+        final FieldInfo fi = createFieldInfo("field1", BuiltinKNNEngine.FAISS, 0);
 
         // Mock flatVectorsReader to return a ScalarQuantizedFloatVectorValues
         final FlatVectorsReader fvr = mock(FlatVectorsReader.class);
@@ -211,28 +218,30 @@ public class Faiss1040ScalarQuantizedKnnVectorsReaderTests extends KNNTestCase {
 
         try {
             // Make KNNEngine return null factory so loadMemoryOptimizedSearcherIfRequired returns null
-            KNNEngine mockFaiss = spy(KNNEngine.FAISS);
+            KNNEngine mockFaiss = spy(BuiltinKNNEngine.FAISS);
             when(mockFaiss.getVectorSearcherFactory()).thenReturn(null);
 
             try (MockedStatic<KNNEngine> ms = mockStatic(KNNEngine.class)) {
                 ms.when(() -> KNNEngine.getEngine(any())).thenReturn(mockFaiss);
-                ms.when(KNNEngine::getEnginesThatCreateCustomSegmentFiles).thenReturn(ImmutableSet.of(mockFaiss));
+                try (MockedStatic<BuiltinKNNEngine> ms2 = mockStatic(BuiltinKNNEngine.class)) {
+                    ms2.when(BuiltinKNNEngine::getEnginesThatCreateCustomSegmentFiles).thenReturn(ImmutableSet.of(mockFaiss));
 
-                final Faiss1040ScalarQuantizedKnnVectorsReader reader = createReader(
-                    new FieldInfos(new FieldInfo[] { fi }),
-                    Collections.emptySet(),
-                    fvr
-                );
+                    final Faiss1040ScalarQuantizedKnnVectorsReader reader = createReader(
+                        new FieldInfos(new FieldInfo[] { fi }),
+                        Collections.emptySet(),
+                        fvr
+                    );
 
-                reader.warmUp("field1");
+                    reader.warmUp("field1");
 
-                // Verify warning was logged
-                boolean foundWarning = logEvents.stream()
-                    .anyMatch(e -> e.getLevel() == Level.WARN && e.getMessage().getFormattedMessage().contains("field1"));
-                assertTrue("Expected a WARN log about MOS not supported for field1", foundWarning);
+                    // Verify warning was logged
+                    boolean foundWarning = logEvents.stream()
+                        .anyMatch(e -> e.getLevel() == Level.WARN && e.getMessage().getFormattedMessage().contains("field1"));
+                    assertTrue("Expected a WARN log about MOS not supported for field1", foundWarning);
 
-                // Verify the searcher warmUp was never called (no searcher available)
-                // This is implicitly verified since the searcher is null
+                    // Verify the searcher warmUp was never called (no searcher available)
+                    // This is implicitly verified since the searcher is null
+                }
             }
         } finally {
             logger.removeAppender(appender);
